constrain icon and non icon divs to fixed width percentages
icon may overlap if overall width of chat selector tab is changed, the fix is to not rely on sprite sheets and separate out the icon into individual images

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -37,7 +37,6 @@ body { font-family: "Roboto", sans-serif; }
   cursor: pointer;
   transition: 0.3s;
   align-items: center;
-  overflow-x: auto;
 }
 
 /* Change background color of buttons on hover */
@@ -54,7 +53,18 @@ body { font-family: "Roboto", sans-serif; }
   background-color: #def3f3;
 }
 
+.username {
+  display: inline-block;
+}
+
+.iconParent {
+  display: flex;
+  min-width: 25%;
+  max-width: 25%;
+}
+
 img.icon {
+  margin: auto;
   object-fit: none;
   object-position: 0 0;
   min-width: 60px;
@@ -64,6 +74,7 @@ img.icon {
 }
 
 div.icon {
+  margin: auto;
   min-width: 60px;
   max-width: 60px;
   min-height: 60px;
@@ -74,23 +85,19 @@ div.icon {
 }
 
 .notIcon {
-  display: inherit;
+  display: flex;
+  min-width: 75%;
+  max-width: 75%;
   min-height: 60px;
   max-height: 60px;
 }
 
-.username {
-  display: inline-block;
-}
-
 .buttonText {
   display: flex;
-  flex: 1;
   flex-direction: column;
   margin: auto;
   min-width: 70%;
   max-width: 70%;
-  overflow: hidden;
 }
 
 .buttonId {
@@ -98,15 +105,12 @@ div.icon {
   max-width: 80%;
   min-width: 60%;
   font-size: 15px;
-  overflow: auto;
 }
 
 .messagePreview {
   padding-left: 5%;
-  overflow: hidden;
   min-width: 0;
   max-width: 100%;
-  /*max-height: 30%;*/
   max-height: 30px;
   white-space: nowrap;
   overflow: hidden;
